--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,13 @@
 
     <string name="title_activity_main">首页</string>
     <string name="bottom_nav_home">主页</string>
-    <string name="bottom_nav_more">更多</string>
-    <string name="bottom_nav_person">个人中心</string>
+    <string name="bottom_nav_guide">导航</string>
+    <string name="bottom_nav_project">项目</string>
 
     <!-- Strings related to main activity-->
     <string name="navigation_drawer_open">打开</string>
     <string name="navigation_drawer_close">关闭</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
