--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="navigation_drawer_open">打开</string>
     <string name="navigation_drawer_close">关闭</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Strings related to article item-->
+    <string name="article_item_text_author">作者:</string>
+    <string name="article_item_text_type">分类:</string>
+    <string name="article_item_text_date">时间:</string>
 </resources>
