--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="search_text_hint">搜索</string>
     <string name="search_back_btn">返回按钮</string>
     <string name="search_close_btn">清空输入</string>
+    <string name="search_btn">搜索按钮</string>
 
 </resources>
