--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,10 @@
     <string name="toast_error">错误提示</string>
     <string name="toast_alert">风险提示</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- android shortcut -->
+    <string name="search_shortcut_short_label1">搜索</string>
+    <string name="search_shortcut_long_label1">搜索你感兴趣的内容</string>
+    <string name="search_disabled_message1">搜索快捷方式暂时不可用，请打开app进入搜索界面来搜索</string>
 </resources>
