--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">LzyWanAndroid</string>
+    <string name="app_copyright">CREATE  BY  LAZYLEE</string>
+
     <string name="title_activity_login">登录</string>
 
     <!-- Strings related to login -->
